Bug 564638 - [15] sealed - permits disallowed as type identifier
Change-Id: I829e6c05cdad709b38d538a410f3e6e18bf7d6d3
Signed-off-by: Manoj Palat <manpalat@in.ibm.com>